snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1-sources.jar.sha512
0e2d70549d272fbf4bed1aeebe6011deaff41eb861cd0b77d9df49d663d824cf9a375f6206a3188541ebcdfc402cec5fa9df97f4698041a1f03bcce229ca56e2